RESOLVED FIXED287866
[WebGPU] RenderPassEncoder.executeBundles fails to clear state after executing bundle commands
https://bugs.webkit.org/show_bug.cgi?id=287866
Summary [WebGPU] RenderPassEncoder.executeBundles fails to clear state after executin...
Mike Wyrzykowski
Reported 2025-02-18 09:58:07 PST
[WebGPU] RenderPassEncoder.executeBundles fails to clear state after executing bundle commands
Attachments
Mike Wyrzykowski
Comment 1 2025-02-18 10:33:13 PST
Mike Wyrzykowski
Comment 2 2025-02-18 10:33:39 PST
EWS
Comment 3 2025-02-18 18:42:53 PST
Committed 290586@main (5279d7db7831): <https://commits.webkit.org/290586@main> Reviewed commits have been landed. Closing PR #40769 and removing active labels.
EWS
Comment 4 2025-02-21 15:52:57 PST
Committed 289651.152@safari-7621-branch (d1513871393a): <https://commits.webkit.org/289651.152@safari-7621-branch> Reviewed commits have been landed. Closing PR #2649 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.