[WebGPU] RenderPassEncoder.executeBundles fails to clear state after executing bundle commands https://bugs.webkit.org/show_bug.cgi?id=287866 rdar://145033045

Reviewed by Tadeu Zagallo.

The specification for executeBundles, https://www.w3.org/TR/webgpu/#render-pass-encoder-bundles, says:

    After a GPURenderBundle has executed, the render pass’s pipeline, bind group, and
    vertex/index buffer state is cleared (to the initial, empty values).

which we were not previously ensuring. This could lead to out of bounds data reads via
stale dynamic offsets.

ComputePassEncoder doesn't support bundles, so change only applies to RenderPassEncoder.

* LayoutTests/fast/webgpu/nocrash/fuzz-287866-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-287866.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executeBundles):
Clear state after executeBundles call.

Canonical link: https://commits.webkit.org/290586@main